--- a/styles/style.css
+++ b/styles/style.css
@@ -1215,7 +1215,7 @@ img {vertical-align: middle;}
 
 @media (max-width: 450px) {
   .about_me_text{
-    color: var(--lighttext);
+    color: var(--darktext);
     padding-top: 15px;
     padding-left: 0px;
     padding-right: 0px;
@@ -1236,7 +1236,7 @@ img {vertical-align: middle;}
   float: left;
   width: 800px;
   height: 400px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
   /* image-resolution: 300dpi; */
   position: relative;
   object-fit: cover;
