--- a/styles/style.css
+++ b/styles/style.css
@@ -58,6 +58,9 @@ p{
   font-size: 24px;
 }
 
+img{
+  image-resolution: 300dpi;
+}
 .border-line {
   padding: 10px;
   padding-left: 40px;
@@ -1237,7 +1240,7 @@ img {vertical-align: middle;}
   width: 800px;
   height: 400px;
   /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
-  /* image-resolution: 300dpi; */
+  image-resolution: 300dpi;
   position: relative;
   object-fit: cover;
   object-position: center ;
