--- a/styles/style.css
+++ b/styles/style.css
@@ -69,7 +69,6 @@ img{
   border-right: 3px solid var(--darktext);
 }
 /* Navigation Bar Styling */
-/* Add a black background color to the top navigation */
 .navbar {
   background-color: var(--main);
   top: 0px;
@@ -114,7 +113,7 @@ img{
 @media screen and (max-width: 900px) {
 .navbar a {
   width: 100%;
-  padding: 14px 16px
+  padding: 14px 16px;
 }
 .navbar a:not(:only-child) {
   display: none;
@@ -122,7 +121,7 @@ img{
 .navbar a.icon {
   float: right;
   display: inline-block;
-  color: var(--ligthtext);
+  color: var(--lighttext);
   text-align: right;
   align-items: center;
   padding: 0px 16px;
@@ -1693,6 +1692,7 @@ img {vertical-align: middle;}
   .port-left{
     grid-column: 1 / 1;
     grid-row: 2 / 2;
+    padding-left: 10px;
       border-right: 0px solid var(--darktext);
   }
 }
