--- a/styles/style.css
+++ b/styles/style.css
@@ -572,17 +572,17 @@ img {vertical-align: middle;}
   background-size: cover;
   background-position: center;
     }
-}
+}*/
 @media (max-width: 300px) {
 .banner {
   width: 100%;
-  height: 900px;
+  height: 100%;
   overflow-x: hidden;
   background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.0)), url(images/background_geospatial_mobile_small.png);
   background-size: cover;
   background-position: center;
     }
-} */
+}
 
 /* Homepage Margin/Padding */
 
