--- a/styles/style.css
+++ b/styles/style.css
@@ -1612,6 +1612,21 @@ img {vertical-align: middle;}
   border-right: 3px solid var(--darktext);
 }
 
+.table-image{
+  height: auto;
+  width: 200px;
+  padding: 20px;
+  justify-content: center;
+
+}
+
+@media (max-width: 500px) {
+.table-image {
+  width: 100px;
+  margin: 0px;
+  padding: 0px;
+    }
+}
 .project-tablet-image{
   height: auto;
   width: 100%;
@@ -2215,3 +2230,75 @@ img {vertical-align: middle;}
   padding-bottom: 10px;
   font-size: 16px;
 }
+
+/*
+	Max width before this PARTICULAR table gets nasty. This query will take effect for any screen smaller than 760px and also iPads specifically.
+	*/
+  .table-style{
+    font-family: 'Montserrat', sans-serif;
+  }
+	@media
+	  only screen
+    and (max-width: 1000px), (min-device-width: 768px)
+    and (max-device-width: 1024px)  {
+
+		/* Force table to not be like tables anymore */
+		table, thead, tbody, th, td, tr {
+			display: block;
+      font-family: 'Montserrat', sans-serif;
+      /* margin: 10%; */
+		}
+
+		/* Hide table headers (but not display: none;, for accessibility) */
+		thead tr {
+			position: absolute;
+			top: -9999px;
+			left: -9999px;
+
+		}
+
+    tr {
+      margin: 0 0 1rem 0;
+    }
+
+    tr:nth-child(odd) {
+      background: var(--lightmain);
+    }
+
+		td {
+			/* Behave  like a "row" */
+			border: none;
+			border-bottom: 2.5px solid var(--alternative);
+			position: relative;
+			padding-left: 30%;
+		}
+
+		td:before {
+			/* Now like a table header */
+			position: absolute;
+			/* Top/left values mimic padding */
+			top: 0px;
+			left: 6px;
+			width: 45%;
+			padding-right: 10px;
+			white-space: nowrap;
+
+		}
+    @media (max-width: 500px) {
+    td {
+			padding-left: 50%;
+        }
+    }
+		/*
+		Label the data
+    You could also use a data-* attribute and content for this. That way "bloats" the HTML, this way means you need to keep HTML and CSS in sync. Lea Verou has a clever way to handle with text-shadow.
+		*/
+		td:nth-of-type(1):before { content: "Website Image"; }
+		td:nth-of-type(2):before { content: "Short Title"; }
+		td:nth-of-type(3):before { content: "Long Title"; }
+		td:nth-of-type(4):before { content: "Year"; }
+		td:nth-of-type(5):before { content: "Term"; }
+		td:nth-of-type(6):before { content: "Participants"; }
+		td:nth-of-type(7):before { content: "Advisors"; }
+		td:nth-of-type(8):before { content: "Project Page"; }
+	}
